--- a/languages/en_GB.po
+++ b/languages/en_GB.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-19 17:46+0000\n"
-"PO-Revision-Date: 2022-09-20 22:14+0000\n"
+"PO-Revision-Date: 2022-09-21 11:30+0000\n"
 "Last-Translator: \n"
 "Language-Team: English (UK)\n"
 "Language: en_GB\n"
@@ -19,7 +19,11 @@ msgstr ""
 msgid "\"name-Theme\" © 2022 | Created by Enza Lombardo"
 msgstr "\"name-Theme\" © 2022 | Created by Enza Lombardo"
 
+#. SLUG_SECTION
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:115
+#: inc/options-theme/OP_theme/03-home.php:221
+#: inc/options-theme/OP_theme/03-home.php:256
 msgid "About"
 msgstr "About"
 
@@ -27,8 +31,29 @@ msgstr "About"
 #. page_title
 #: inc/options-theme/OP_Profile/04-aboutme.php:57
 #: inc/options-theme/OP_Profile/04-aboutme.php:58
+#: template-parts/section/home/buttons/fr-btn.php:18
+#: template-parts/section/home/buttons/it-btn.php:18
+#: template-parts/section/home/buttons/en-btn.php:18
 msgid "About me"
 msgstr "About me"
+
+#: inc/options-theme/OP_theme/03-home.php:630
+#: inc/options-theme/OP_theme/03-home.php:646
+#: inc/options-theme/OP_theme/03-home.php:662
+msgid "Afficher l'îcone"
+msgstr "Show icon"
+
+#: inc/options-theme/OP_theme/03-home.php:626
+#: inc/options-theme/OP_theme/03-home.php:642
+#: inc/options-theme/OP_theme/03-home.php:658
+msgid "Afficher le bouton"
+msgstr "Show button"
+
+#: inc/options-theme/OP_theme/03-home.php:585
+#: inc/options-theme/OP_theme/03-home.php:596
+#: inc/options-theme/OP_theme/03-home.php:607
+msgid "Ajouter la petite intro"
+msgstr "Add small intro"
 
 #: inc/options-theme/OP_Profile/02-media.php:128
 msgid "Ajouter les différentes photos de votre Portfolio"
@@ -39,13 +64,25 @@ msgstr "Adding the different photos of your protfolio"
 msgid "Ajouter les medias"
 msgstr "Add media"
 
+#: inc/options-theme/OP_theme/03-home.php:369
+msgid "Ajouter une image comme arrière plan"
+msgstr "Add background image"
+
 #: template-parts/footer/copyright.php:20
 msgid "All rights reserved"
 msgstr "All rights reserved"
 
+#: inc/options-theme/OP_theme/03-home.php:415
+#: inc/options-theme/OP_theme/03-home.php:462
+#: inc/options-theme/OP_theme/03-home.php:551
+#: inc/options-theme/OP_theme/03-home.php:593
+msgid "Anglais"
+msgstr "English"
+
 #: inc/options-theme/OP_Profile/02-media.php:199
 #: inc/options-theme/OP_Profile/02-media.php:216
 #: inc/options-theme/OP_Profile/02-media.php:233
+#: inc/options-theme/OP_theme/03-home.php:372
 msgid "Aperçu :"
 msgstr "Overview :"
 
@@ -53,10 +90,21 @@ msgstr "Overview :"
 msgid "Avatar"
 msgstr "Avatar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:106
+msgid "Bannière"
+msgstr "Banner"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:141
 msgid "Behance"
 msgstr "Behance"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:113
+#: inc/options-theme/OP_theme/03-home.php:193
+msgid "Cacher la section"
+msgstr "Hide section"
 
 #: inc/options-theme/OP_theme/02-core.php:223
 msgid "Cacher la section utilisateur de la sidebar"
@@ -66,10 +114,39 @@ msgstr "Hide the user section of the sidebar"
 msgid "Cacher les réseaux sociaux de la sidebar"
 msgstr "Hide social networks from the sidebar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:249
+msgid "Call to action"
+msgstr "Call to action"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:117
+#: inc/options-theme/OP_theme/03-home.php:154
 msgid "Ce qui doit être présent"
-msgstr "What should be present\"
+msgstr "What should be present"
+
+#: inc/options-theme/OP_theme/03-home.php:319
+msgid "Cette partie vous permet de gérer l'affichage de about"
+msgstr "This part allows you to manage the display of the about section"
+
+#: inc/options-theme/OP_theme/03-home.php:303
+msgid ""
+"Cette partie vous permet de gérer l'affichage de l'introduction / salutation"
+msgstr "This part allows you to manage the display of the introduction / greeting"
+
+#: inc/options-theme/OP_theme/03-home.php:295
+msgid "Cette partie vous permet de gérer l'affichage de la bannière"
+msgstr "This part allows you to manage the display of the banner"
+
+#: inc/options-theme/OP_theme/03-home.php:327
+msgid ""
+"Cette partie vous permet de gérer l'affichage desc call-to-action présent "
+"dans la section"
+msgstr "This part allows you to manage the display of the call-to-actions in the section"
+
+#: inc/options-theme/OP_theme/03-home.php:311
+msgid "Cette partie vous permet de gérer l'affichage du métier visé"
+msgstr "This part allows you to manage the display of the target job"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:124
@@ -88,9 +165,10 @@ msgstr "Choose the type of footer to display"
 msgid ""
 "Choisir les mentions légals à afficher | Uniquement si Partie légale est "
 "coché"
-msgstr "Choose the legal notice to display | Only if the legal part is checked\"
+msgstr "Choose the legal notice to display | Only if the legal part is checked"
 
 #: inc/options-theme/OP_theme/02-core.php:233
+#: inc/options-theme/OP_theme/03-home.php:511
 msgid "Cocher ce qui doit être présent"
 msgstr "Check what should be present"
 
@@ -98,9 +176,17 @@ msgstr "Check what should be present"
 msgid "Cocher et ajouter l'url de vos réseaux sociaux"
 msgstr "Check and add the URL of your social networks"
 
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:145
+#: inc/options-theme/OP_theme/03-home.php:270
 msgid "Contact"
 msgstr "Contact"
+
+#: template-parts/section/home/buttons/fr-btn.php:36
+#: template-parts/section/home/buttons/it-btn.php:36
+#: template-parts/section/home/buttons/en-btn.php:36
+msgid "Contactez-moi"
+msgstr "Contact me"
 
 #: template-parts/footer/legal.php:37 template-parts/footer/legal.php:41
 #: template-parts/footer/legal.php:45
@@ -153,6 +239,14 @@ msgstr "In this section you can manage the elements of the header"
 msgid "Date de naissance"
 msgstr "Date of birth"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:263
+#: template-parts/section/home/buttons/fr-btn.php:27
+#: template-parts/section/home/buttons/it-btn.php:27
+#: template-parts/section/home/buttons/en-btn.php:27
+msgid "Download CV"
+msgstr "Download CV"
+
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:105
 msgid "Détails personnels"
@@ -171,6 +265,23 @@ msgstr "Enza Lombardo"
 #: inc/options-theme/OP_Profile/03-network.php:109
 msgid "Facebook"
 msgstr "Facebook"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:147
+msgid "Format"
+msgstr "Format"
+
+#: inc/options-theme/OP_theme/03-home.php:406
+#: inc/options-theme/OP_theme/03-home.php:441
+#: inc/options-theme/OP_theme/03-home.php:541
+#: inc/options-theme/OP_theme/03-home.php:582
+msgid "Français"
+msgstr "French"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:228
+msgid "Gestion"
+msgstr "Management"
 
 #: inc/options-theme/OP_Profile/05-curriculum.php:189
 #: inc/options-theme/OP_Profile/04-aboutme.php:216
@@ -211,7 +322,11 @@ msgstr "Manage footer"
 msgid "Gérer le header"
 msgstr "Manage header"
 
+#. slug parent
+#. page_title
 #: inc/options-theme/OP_theme/01-customTheme.php:100
+#: inc/options-theme/OP_theme/03-home.php:60
+#: inc/options-theme/OP_theme/03-home.php:61
 msgid "Home"
 msgstr "Home"
 
@@ -222,6 +337,11 @@ msgstr "https://enzalombardo.be"
 #. URI of the theme
 msgid "https://enzawebdev.be"
 msgstr "https://enzawebdev.be"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:120
+msgid "Image en arrière plan"
+msgstr "Background image"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/05-curriculum.php:110
@@ -235,7 +355,21 @@ msgstr "Import my CV"
 msgid "Instagram"
 msgstr "Instagram"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:140
+msgid "Intro"
+msgstr "Introduction"
+
+#: inc/options-theme/OP_theme/03-home.php:424
+#: inc/options-theme/OP_theme/03-home.php:483
+#: inc/options-theme/OP_theme/03-home.php:561
+#: inc/options-theme/OP_theme/03-home.php:604
+msgid "Italien"
+msgstr "Italian"
+
+#. SLUG_SECTION
 #: inc/options-theme/OP_theme/02-core.php:245
+#: inc/options-theme/OP_theme/03-home.php:186
 msgid "Job"
 msgstr "Job"
 
@@ -267,6 +401,18 @@ msgstr "Link to manage the about section"
 msgid "Lien pour gérer la section portfolio"
 msgstr "ink to manage the portfolio section"
 
+#: inc/options-theme/OP_theme/03-home.php:443
+#: inc/options-theme/OP_theme/03-home.php:464
+#: inc/options-theme/OP_theme/03-home.php:485
+msgid "Ligne 1"
+msgstr "Line 1"
+
+#: inc/options-theme/OP_theme/03-home.php:452
+#: inc/options-theme/OP_theme/03-home.php:473
+#: inc/options-theme/OP_theme/03-home.php:494
+msgid "Ligne 2"
+msgstr "Line 2"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:133
 msgid "LinkedIn"
@@ -290,6 +436,14 @@ msgstr "My avatar picture"
 #: inc/options-theme/OP_Profile/02-media.php:201
 msgid "Ma photo de profile"
 msgstr "My profile picture"
+
+#: inc/options-theme/OP_theme/03-home.php:360
+msgid "Masquer la section home du thème"
+msgstr "Hide theme home section"
+
+#: inc/options-theme/OP_theme/03-home.php:530
+msgid "Masquer le poste visé"
+msgstr "Hide target post"
 
 #: template-parts/footer/legal.php:18 template-parts/footer/legal.php:22
 #: template-parts/footer/legal.php:26
@@ -328,6 +482,17 @@ msgstr "My networks"
 msgid "Mes réseaux sociaux"
 msgstr "My social networks"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:200
+msgid "Message"
+msgstr "Message"
+
+#: inc/options-theme/OP_theme/03-home.php:589
+#: inc/options-theme/OP_theme/03-home.php:600
+#: inc/options-theme/OP_theme/03-home.php:611
+msgid "Modifier le texte \"Parler de sois\""
+msgstr "Edit the \"Tell me about yourself\"
+
 #: inc/options-theme/OP_Profile/02-media.php:231
 #: inc/options-theme/OP_Profile/02-media.php:235
 msgid "Mon logo"
@@ -356,6 +521,7 @@ msgstr "My Portfolio online"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:258
 #: inc/options-theme/OP_theme/02-core.php:237
+#: inc/options-theme/OP_theme/03-home.php:515
 msgid "Nom"
 msgstr "Name (Last name)"
 
@@ -384,6 +550,10 @@ msgstr "Talk about yourself"
 msgid "Partie légale"
 msgstr "Legal section"
 
+#: inc/options-theme/OP_theme/03-home.php:74
+msgid "Personnaliser l'accueil"
+msgstr "Customise the welcome"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/04-aboutme.php:111
 #: inc/options-theme/OP_Profile/04-aboutme.php:147
@@ -410,6 +580,7 @@ msgstr "Profile"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:265
 #: inc/options-theme/OP_theme/02-core.php:241
+#: inc/options-theme/OP_theme/03-home.php:519
 msgid "Prénom"
 msgstr "First name"
 
@@ -427,6 +598,26 @@ msgstr "Who I am (in French)"
 #: inc/options-theme/OP_Profile/04-aboutme.php:175
 msgid "Qui suis-je ? (en italien)"
 msgstr "Who I am (in Italian)"
+
+#: inc/options-theme/OP_theme/03-home.php:402
+msgid "Salutation en 1 ligne"
+msgstr "Greeting in 1 line"
+
+#: inc/options-theme/OP_theme/03-home.php:437
+msgid "Salutation en 2 lignes"
+msgstr "Greeting in 2 lines"
+
+#: inc/options-theme/OP_theme/03-home.php:420
+msgid "Salutation en anglais"
+msgstr "Greeting in English"
+
+#: inc/options-theme/OP_theme/03-home.php:411
+msgid "Salutation en français"
+msgstr "Greeting in French"
+
+#: inc/options-theme/OP_theme/03-home.php:429
+msgid "Salutation en italien"
+msgstr "Greeting in Italian"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:223
 msgid "Section dédiée aux informations de contact"
@@ -470,6 +661,10 @@ msgstr "User section"
 msgid "Site Web"
 msgstr "Website"
 
+#: inc/options-theme/OP_theme/03-home.php:76
+msgid "Sur cette page vous pouvez gérer la section accueil du site"
+msgstr "On this page you can manage the home section of the site"
+
 #: inc/options-theme/OP_Profile/02-media.php:71
 msgid ""
 "Sur cette page vous pouvez gérer les différents médias de votre portfolio"
@@ -494,6 +689,24 @@ msgstr "On this page you can manage the import of your CV"
 #: inc/options-theme/OP_Profile/04-aboutme.php:73
 msgid "Sur cette page, vous pouvez parler de vous"
 msgstr "On this page you can talk about yourself"
+
+#: inc/options-theme/OP_theme/03-home.php:469
+#: inc/options-theme/OP_theme/03-home.php:478
+#: inc/options-theme/OP_theme/03-home.php:556
+msgid "Texte en anglais"
+msgstr "Text in English"
+
+#: inc/options-theme/OP_theme/03-home.php:448
+#: inc/options-theme/OP_theme/03-home.php:457
+#: inc/options-theme/OP_theme/03-home.php:546
+msgid "Texte en français"
+msgstr "ext in French"
+
+#: inc/options-theme/OP_theme/03-home.php:490
+#: inc/options-theme/OP_theme/03-home.php:499
+#: inc/options-theme/OP_theme/03-home.php:566
+msgid "Texte en italien"
+msgstr "Text in Italian"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:195
@@ -530,6 +743,10 @@ msgstr "Phone"
 #: inc/options-theme/OP_theme/02-core.php:291
 msgid "Uniquement le copyright"
 msgstr "Only copyright"
+
+#: inc/options-theme/OP_theme/03-home.php:538
+msgid "Uniquement si la section est visible"
+msgstr "Only if the section is visible"
 
 #: inc/options-theme/OP_theme/02-core.php:257
 msgid "Uniquement si photo est chocher"
