--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-19 17:46+0000\n"
-"PO-Revision-Date: 2022-09-20 22:12+0000\n"
+"PO-Revision-Date: 2022-09-21 11:30+0000\n"
 "Last-Translator: \n"
 "Language-Team: Français\n"
 "Language: fr_FR\n"
@@ -19,7 +19,11 @@ msgstr ""
 msgid "\"name-Theme\" © 2022 | Created by Enza Lombardo"
 msgstr "\"name-theme\" © 2022 | Créé par Enza Lombardo"
 
+#. SLUG_SECTION
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:115
+#: inc/options-theme/OP_theme/03-home.php:221
+#: inc/options-theme/OP_theme/03-home.php:256
 msgid "About"
 msgstr "À propos"
 
@@ -27,8 +31,29 @@ msgstr "À propos"
 #. page_title
 #: inc/options-theme/OP_Profile/04-aboutme.php:57
 #: inc/options-theme/OP_Profile/04-aboutme.php:58
+#: template-parts/section/home/buttons/fr-btn.php:18
+#: template-parts/section/home/buttons/it-btn.php:18
+#: template-parts/section/home/buttons/en-btn.php:18
 msgid "About me"
 msgstr "À propos de moi"
+
+#: inc/options-theme/OP_theme/03-home.php:630
+#: inc/options-theme/OP_theme/03-home.php:646
+#: inc/options-theme/OP_theme/03-home.php:662
+msgid "Afficher l'îcone"
+msgstr "Afficher l'îcone"
+
+#: inc/options-theme/OP_theme/03-home.php:626
+#: inc/options-theme/OP_theme/03-home.php:642
+#: inc/options-theme/OP_theme/03-home.php:658
+msgid "Afficher le bouton"
+msgstr "Afficher le bouton"
+
+#: inc/options-theme/OP_theme/03-home.php:585
+#: inc/options-theme/OP_theme/03-home.php:596
+#: inc/options-theme/OP_theme/03-home.php:607
+msgid "Ajouter la petite intro"
+msgstr "Ajouter la petite intro"
 
 #: inc/options-theme/OP_Profile/02-media.php:128
 msgid "Ajouter les différentes photos de votre Portfolio"
@@ -39,13 +64,25 @@ msgstr "Ajouter les différentes photos de votre protfolio"
 msgid "Ajouter les medias"
 msgstr "Ajouter les médias"
 
+#: inc/options-theme/OP_theme/03-home.php:369
+msgid "Ajouter une image comme arrière plan"
+msgstr "Ajouter une image comme arrière plan"
+
 #: template-parts/footer/copyright.php:20
 msgid "All rights reserved"
 msgstr "Tous les droits sont réservés"
 
+#: inc/options-theme/OP_theme/03-home.php:415
+#: inc/options-theme/OP_theme/03-home.php:462
+#: inc/options-theme/OP_theme/03-home.php:551
+#: inc/options-theme/OP_theme/03-home.php:593
+msgid "Anglais"
+msgstr "Anglais"
+
 #: inc/options-theme/OP_Profile/02-media.php:199
 #: inc/options-theme/OP_Profile/02-media.php:216
 #: inc/options-theme/OP_Profile/02-media.php:233
+#: inc/options-theme/OP_theme/03-home.php:372
 msgid "Aperçu :"
 msgstr "Aperçu : "
 
@@ -53,10 +90,21 @@ msgstr "Aperçu : "
 msgid "Avatar"
 msgstr "Avatar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:106
+msgid "Bannière"
+msgstr "Bannière"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:141
 msgid "Behance"
 msgstr "Behance"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:113
+#: inc/options-theme/OP_theme/03-home.php:193
+msgid "Cacher la section"
+msgstr "Cacher la section"
 
 #: inc/options-theme/OP_theme/02-core.php:223
 msgid "Cacher la section utilisateur de la sidebar"
@@ -66,10 +114,39 @@ msgstr "Cacher la section utilisateur de la sidebar"
 msgid "Cacher les réseaux sociaux de la sidebar"
 msgstr "Cacher les réseaux sociaux de la sidebar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:249
+msgid "Call to action"
+msgstr "Call to action"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:117
+#: inc/options-theme/OP_theme/03-home.php:154
 msgid "Ce qui doit être présent"
 msgstr "Ce qui doit être présent"
+
+#: inc/options-theme/OP_theme/03-home.php:319
+msgid "Cette partie vous permet de gérer l'affichage de about"
+msgstr "Cette partie, vous permet de gérer l'affichage de la section à propos"
+
+#: inc/options-theme/OP_theme/03-home.php:303
+msgid ""
+"Cette partie vous permet de gérer l'affichage de l'introduction / salutation"
+msgstr "Cette partie, vous permet de gérer l'affichage de l'introduction / salutation"
+
+#: inc/options-theme/OP_theme/03-home.php:295
+msgid "Cette partie vous permet de gérer l'affichage de la bannière"
+msgstr "Cette partie, vous permet de gérer l'affichage de la bannière"
+
+#: inc/options-theme/OP_theme/03-home.php:327
+msgid ""
+"Cette partie vous permet de gérer l'affichage desc call-to-action présent "
+"dans la section"
+msgstr "Cette partie, vous permet de gérer l'affichage des call-to-action présent dans la section"
+
+#: inc/options-theme/OP_theme/03-home.php:311
+msgid "Cette partie vous permet de gérer l'affichage du métier visé"
+msgstr "Cette partie, vous permet de gérer l'affichage du métier visé"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:124
@@ -93,6 +170,7 @@ msgstr ""
 "coché"
 
 #: inc/options-theme/OP_theme/02-core.php:233
+#: inc/options-theme/OP_theme/03-home.php:511
 msgid "Cocher ce qui doit être présent"
 msgstr "Cocher ce qui doit être présent"
 
@@ -100,9 +178,17 @@ msgstr "Cocher ce qui doit être présent"
 msgid "Cocher et ajouter l'url de vos réseaux sociaux"
 msgstr "Coucher et ajouter l'URL de vos réseaux sociaux"
 
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:145
+#: inc/options-theme/OP_theme/03-home.php:270
 msgid "Contact"
 msgstr "Contact"
+
+#: template-parts/section/home/buttons/fr-btn.php:36
+#: template-parts/section/home/buttons/it-btn.php:36
+#: template-parts/section/home/buttons/en-btn.php:36
+msgid "Contactez-moi"
+msgstr "Contactez-moi"
 
 #: template-parts/footer/legal.php:37 template-parts/footer/legal.php:41
 #: template-parts/footer/legal.php:45
@@ -155,6 +241,14 @@ msgstr "Dans cette section, vous pouvez gérer les éléments de l'en-tête"
 msgid "Date de naissance"
 msgstr "Date de naissance"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:263
+#: template-parts/section/home/buttons/fr-btn.php:27
+#: template-parts/section/home/buttons/it-btn.php:27
+#: template-parts/section/home/buttons/en-btn.php:27
+msgid "Download CV"
+msgstr "Télécharger CV"
+
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:105
 msgid "Détails personnels"
@@ -173,6 +267,23 @@ msgstr "Enza Lombardo"
 #: inc/options-theme/OP_Profile/03-network.php:109
 msgid "Facebook"
 msgstr "Facebook"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:147
+msgid "Format"
+msgstr "Format"
+
+#: inc/options-theme/OP_theme/03-home.php:406
+#: inc/options-theme/OP_theme/03-home.php:441
+#: inc/options-theme/OP_theme/03-home.php:541
+#: inc/options-theme/OP_theme/03-home.php:582
+msgid "Français"
+msgstr "Français"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:228
+msgid "Gestion"
+msgstr "Gestion"
 
 #: inc/options-theme/OP_Profile/05-curriculum.php:189
 #: inc/options-theme/OP_Profile/04-aboutme.php:216
@@ -213,9 +324,13 @@ msgstr "Gérer le pied de page"
 msgid "Gérer le header"
 msgstr "Gérer l'en-tête"
 
+#. slug parent
+#. page_title
 #: inc/options-theme/OP_theme/01-customTheme.php:100
+#: inc/options-theme/OP_theme/03-home.php:60
+#: inc/options-theme/OP_theme/03-home.php:61
 msgid "Home"
-msgstr "Gérer l'en-tête"
+msgstr "Accueil"
 
 #. Author URI of the theme
 msgid "https://enzalombardo.be"
@@ -225,6 +340,11 @@ msgstr "https://enzalombardo.be"
 #| msgid "https://enzawebdev.be/"
 msgid "https://enzawebdev.be"
 msgstr "https://enzawebdev.be"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:120
+msgid "Image en arrière plan"
+msgstr "Image en arrière-plan"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/05-curriculum.php:110
@@ -238,7 +358,21 @@ msgstr "Importer mon CV"
 msgid "Instagram"
 msgstr "Instagram"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:140
+msgid "Intro"
+msgstr "Intro"
+
+#: inc/options-theme/OP_theme/03-home.php:424
+#: inc/options-theme/OP_theme/03-home.php:483
+#: inc/options-theme/OP_theme/03-home.php:561
+#: inc/options-theme/OP_theme/03-home.php:604
+msgid "Italien"
+msgstr "Italien"
+
+#. SLUG_SECTION
 #: inc/options-theme/OP_theme/02-core.php:245
+#: inc/options-theme/OP_theme/03-home.php:186
 msgid "Job"
 msgstr "Job"
 
@@ -270,6 +404,18 @@ msgstr "Lien pour gérer la section à propos"
 msgid "Lien pour gérer la section portfolio"
 msgstr "Lien pour gérer la section portfolio"
 
+#: inc/options-theme/OP_theme/03-home.php:443
+#: inc/options-theme/OP_theme/03-home.php:464
+#: inc/options-theme/OP_theme/03-home.php:485
+msgid "Ligne 1"
+msgstr "Ligne 1"
+
+#: inc/options-theme/OP_theme/03-home.php:452
+#: inc/options-theme/OP_theme/03-home.php:473
+#: inc/options-theme/OP_theme/03-home.php:494
+msgid "Ligne 2"
+msgstr "Ligne 2"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:133
 msgid "LinkedIn"
@@ -293,6 +439,14 @@ msgstr "Ma photo d'avatar"
 #: inc/options-theme/OP_Profile/02-media.php:201
 msgid "Ma photo de profile"
 msgstr "Ma photo de profil"
+
+#: inc/options-theme/OP_theme/03-home.php:360
+msgid "Masquer la section home du thème"
+msgstr "Masquer la section accueil du thème"
+
+#: inc/options-theme/OP_theme/03-home.php:530
+msgid "Masquer le poste visé"
+msgstr "Masquer le poste visé"
 
 #: template-parts/footer/legal.php:18 template-parts/footer/legal.php:22
 #: template-parts/footer/legal.php:26
@@ -331,6 +485,17 @@ msgstr "Mes réseaux"
 msgid "Mes réseaux sociaux"
 msgstr "Mes réseaux sociaux"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:200
+msgid "Message"
+msgstr "Message"
+
+#: inc/options-theme/OP_theme/03-home.php:589
+#: inc/options-theme/OP_theme/03-home.php:600
+#: inc/options-theme/OP_theme/03-home.php:611
+msgid "Modifier le texte \"Parler de sois\""
+msgstr "Modifier le texte \"Parler de sois\""
+
 #: inc/options-theme/OP_Profile/02-media.php:231
 #: inc/options-theme/OP_Profile/02-media.php:235
 msgid "Mon logo"
@@ -359,6 +524,7 @@ msgstr "Mon portfolio en ligne"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:258
 #: inc/options-theme/OP_theme/02-core.php:237
+#: inc/options-theme/OP_theme/03-home.php:515
 msgid "Nom"
 msgstr "Nom"
 
@@ -387,6 +553,10 @@ msgstr "Parler de sois"
 msgid "Partie légale"
 msgstr "Partie légale"
 
+#: inc/options-theme/OP_theme/03-home.php:74
+msgid "Personnaliser l'accueil"
+msgstr "Personnaliser l'accueil"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/04-aboutme.php:111
 #: inc/options-theme/OP_Profile/04-aboutme.php:147
@@ -413,6 +583,7 @@ msgstr "Profil"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:265
 #: inc/options-theme/OP_theme/02-core.php:241
+#: inc/options-theme/OP_theme/03-home.php:519
 msgid "Prénom"
 msgstr "Prénom"
 
@@ -430,6 +601,26 @@ msgstr "Qui suis-je ? (en français)"
 #: inc/options-theme/OP_Profile/04-aboutme.php:175
 msgid "Qui suis-je ? (en italien)"
 msgstr "Qui suis-je ? (en italien)"
+
+#: inc/options-theme/OP_theme/03-home.php:402
+msgid "Salutation en 1 ligne"
+msgstr "Salutation en 1 ligne"
+
+#: inc/options-theme/OP_theme/03-home.php:437
+msgid "Salutation en 2 lignes"
+msgstr "Salutation en 2 lignes"
+
+#: inc/options-theme/OP_theme/03-home.php:420
+msgid "Salutation en anglais"
+msgstr "Salutation en anglais"
+
+#: inc/options-theme/OP_theme/03-home.php:411
+msgid "Salutation en français"
+msgstr "Salutation en français"
+
+#: inc/options-theme/OP_theme/03-home.php:429
+msgid "Salutation en italien"
+msgstr "Salutation en italien"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:223
 msgid "Section dédiée aux informations de contact"
@@ -473,6 +664,10 @@ msgstr "Section utilisateur"
 msgid "Site Web"
 msgstr "Site Web"
 
+#: inc/options-theme/OP_theme/03-home.php:76
+msgid "Sur cette page vous pouvez gérer la section accueil du site"
+msgstr "Sur cette page, vous pouvez gérer la section accueil du site"
+
 #: inc/options-theme/OP_Profile/02-media.php:71
 msgid ""
 "Sur cette page vous pouvez gérer les différents médias de votre portfolio"
@@ -499,6 +694,24 @@ msgstr "Sur cette page, vous pouvez gérer l'import de votre CV"
 #: inc/options-theme/OP_Profile/04-aboutme.php:73
 msgid "Sur cette page, vous pouvez parler de vous"
 msgstr "Sur cette page, vous pouvez parler de vous"
+
+#: inc/options-theme/OP_theme/03-home.php:469
+#: inc/options-theme/OP_theme/03-home.php:478
+#: inc/options-theme/OP_theme/03-home.php:556
+msgid "Texte en anglais"
+msgstr "Texte en anglais"
+
+#: inc/options-theme/OP_theme/03-home.php:448
+#: inc/options-theme/OP_theme/03-home.php:457
+#: inc/options-theme/OP_theme/03-home.php:546
+msgid "Texte en français"
+msgstr "Texte en français"
+
+#: inc/options-theme/OP_theme/03-home.php:490
+#: inc/options-theme/OP_theme/03-home.php:499
+#: inc/options-theme/OP_theme/03-home.php:566
+msgid "Texte en italien"
+msgstr "Texte en italien"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:195
@@ -535,6 +748,10 @@ msgstr "Téléphone"
 #: inc/options-theme/OP_theme/02-core.php:291
 msgid "Uniquement le copyright"
 msgstr "Uniquement le copyright"
+
+#: inc/options-theme/OP_theme/03-home.php:538
+msgid "Uniquement si la section est visible"
+msgstr "Uniquement si la section est visible"
 
 #: inc/options-theme/OP_theme/02-core.php:257
 msgid "Uniquement si photo est chocher"
