--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-19 17:46+0000\n"
-"PO-Revision-Date: 2022-09-20 22:14+0000\n"
+"PO-Revision-Date: 2022-09-21 11:33+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italian\n"
 "Language: it_IT\n"
@@ -19,7 +19,11 @@ msgstr ""
 msgid "\"name-Theme\" © 2022 | Created by Enza Lombardo"
 msgstr "\"nome-tema\" © 2022 | Creato da Enza Lombardo"
 
+#. SLUG_SECTION
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:115
+#: inc/options-theme/OP_theme/03-home.php:221
+#: inc/options-theme/OP_theme/03-home.php:256
 msgid "About"
 msgstr "Su di me"
 
@@ -27,8 +31,29 @@ msgstr "Su di me"
 #. page_title
 #: inc/options-theme/OP_Profile/04-aboutme.php:57
 #: inc/options-theme/OP_Profile/04-aboutme.php:58
+#: template-parts/section/home/buttons/fr-btn.php:18
+#: template-parts/section/home/buttons/it-btn.php:18
+#: template-parts/section/home/buttons/en-btn.php:18
 msgid "About me"
 msgstr "Su di me"
+
+#: inc/options-theme/OP_theme/03-home.php:630
+#: inc/options-theme/OP_theme/03-home.php:646
+#: inc/options-theme/OP_theme/03-home.php:662
+msgid "Afficher l'îcone"
+msgstr "Mostra icona"
+
+#: inc/options-theme/OP_theme/03-home.php:626
+#: inc/options-theme/OP_theme/03-home.php:642
+#: inc/options-theme/OP_theme/03-home.php:658
+msgid "Afficher le bouton"
+msgstr "Mostra i pulsanti"
+
+#: inc/options-theme/OP_theme/03-home.php:585
+#: inc/options-theme/OP_theme/03-home.php:596
+#: inc/options-theme/OP_theme/03-home.php:607
+msgid "Ajouter la petite intro"
+msgstr "Aggiungere la piccola introduzione"
 
 #: inc/options-theme/OP_Profile/02-media.php:128
 msgid "Ajouter les différentes photos de votre Portfolio"
@@ -39,13 +64,25 @@ msgstr "Aggiungere le diverse foto del vostro portfolio"
 msgid "Ajouter les medias"
 msgstr "Aggiungi media"
 
+#: inc/options-theme/OP_theme/03-home.php:369
+msgid "Ajouter une image comme arrière plan"
+msgstr "Aggiungere un'immagine come sfondo"
+
 #: template-parts/footer/copyright.php:20
 msgid "All rights reserved"
 msgstr "Tutti i diritti riservati"
 
+#: inc/options-theme/OP_theme/03-home.php:415
+#: inc/options-theme/OP_theme/03-home.php:462
+#: inc/options-theme/OP_theme/03-home.php:551
+#: inc/options-theme/OP_theme/03-home.php:593
+msgid "Anglais"
+msgstr "Inglese"
+
 #: inc/options-theme/OP_Profile/02-media.php:199
 #: inc/options-theme/OP_Profile/02-media.php:216
 #: inc/options-theme/OP_Profile/02-media.php:233
+#: inc/options-theme/OP_theme/03-home.php:372
 msgid "Aperçu :"
 msgstr "Anteprima :"
 
@@ -53,10 +90,21 @@ msgstr "Anteprima :"
 msgid "Avatar"
 msgstr "Avatar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:106
+msgid "Bannière"
+msgstr "Banner"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:141
 msgid "Behance"
 msgstr "Behance"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:113
+#: inc/options-theme/OP_theme/03-home.php:193
+msgid "Cacher la section"
+msgstr "Nascondere la sezione"
 
 #: inc/options-theme/OP_theme/02-core.php:223
 msgid "Cacher la section utilisateur de la sidebar"
@@ -66,10 +114,39 @@ msgstr "Nascondere i social network dalla sidebar"
 msgid "Cacher les réseaux sociaux de la sidebar"
 msgstr "Nascondere la sezione utenti della sidebar"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:249
+msgid "Call to action"
+msgstr "Call to action"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:117
+#: inc/options-theme/OP_theme/03-home.php:154
 msgid "Ce qui doit être présent"
 msgstr "Cosa dovrebbe essere presente"
+
+#: inc/options-theme/OP_theme/03-home.php:319
+msgid "Cette partie vous permet de gérer l'affichage de about"
+msgstr "Questa sezione permette di gestire la visualizzazione di about"
+
+#: inc/options-theme/OP_theme/03-home.php:303
+msgid ""
+"Cette partie vous permet de gérer l'affichage de l'introduction / salutation"
+msgstr "Questa parte consente di gestire la visualizzazione del messaggio di introduzione / benvenuto"
+
+#: inc/options-theme/OP_theme/03-home.php:295
+msgid "Cette partie vous permet de gérer l'affichage de la bannière"
+msgstr "Questa parte permette di gestire la visualizzazione del banner"
+
+#: inc/options-theme/OP_theme/03-home.php:327
+msgid ""
+"Cette partie vous permet de gérer l'affichage desc call-to-action présent "
+"dans la section"
+msgstr "Questa parte consente di gestire la visualizzazione della call-to-action presente nella sezione"
+
+#: inc/options-theme/OP_theme/03-home.php:311
+msgid "Cette partie vous permet de gérer l'affichage du métier visé"
+msgstr "Questa parte consente di gestire la visualizzazione del lavoro mirato"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_theme/02-core.php:124
@@ -88,9 +165,12 @@ msgstr "Scegliere il tipo di footer da visualizzare"
 msgid ""
 "Choisir les mentions légals à afficher | Uniquement si Partie légale est "
 "coché"
-msgstr "Scegliere la nota legale da visualizzare | Solo se la parte legale è selezionata"
+msgstr ""
+"Scegliere la nota legale da visualizzare | Solo se la parte legale è "
+"selezionata"
 
 #: inc/options-theme/OP_theme/02-core.php:233
+#: inc/options-theme/OP_theme/03-home.php:511
 msgid "Cocher ce qui doit être présent"
 msgstr "Sponta ciò che dovrebbe essere presente "
 
@@ -98,9 +178,17 @@ msgstr "Sponta ciò che dovrebbe essere presente "
 msgid "Cocher et ajouter l'url de vos réseaux sociaux"
 msgstr "Spunta e aggiungi l'URL dei tuoi social network"
 
+#. SLUG_FIELD
 #: inc/options-theme/OP_theme/01-customTheme.php:145
+#: inc/options-theme/OP_theme/03-home.php:270
 msgid "Contact"
 msgstr "Contatti"
+
+#: template-parts/section/home/buttons/fr-btn.php:36
+#: template-parts/section/home/buttons/it-btn.php:36
+#: template-parts/section/home/buttons/en-btn.php:36
+msgid "Contactez-moi"
+msgstr "Contattatemi"
 
 #: template-parts/footer/legal.php:37 template-parts/footer/legal.php:41
 #: template-parts/footer/legal.php:45
@@ -146,12 +234,20 @@ msgstr "In questa sezione è possibile gestire gli elementi del footer"
 
 #: inc/options-theme/OP_theme/02-core.php:197
 msgid "Dans cette section, vous pouvez gérer tous les éléments du header"
-msgstr "In questa sezione è possibile gestire gli elementi dell'header\"
+msgstr "In questa sezione è possibile gestire gli elementi dell'header"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:120
 msgid "Date de naissance"
 msgstr "Data di nascita"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:263
+#: template-parts/section/home/buttons/fr-btn.php:27
+#: template-parts/section/home/buttons/it-btn.php:27
+#: template-parts/section/home/buttons/en-btn.php:27
+msgid "Download CV"
+msgstr "Scarica il CV"
 
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:105
@@ -171,6 +267,23 @@ msgstr "Enza Lombardo"
 #: inc/options-theme/OP_Profile/03-network.php:109
 msgid "Facebook"
 msgstr "Facebook"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:147
+msgid "Format"
+msgstr "Formato"
+
+#: inc/options-theme/OP_theme/03-home.php:406
+#: inc/options-theme/OP_theme/03-home.php:441
+#: inc/options-theme/OP_theme/03-home.php:541
+#: inc/options-theme/OP_theme/03-home.php:582
+msgid "Français"
+msgstr "Francese"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:228
+msgid "Gestion"
+msgstr "Gestione"
 
 #: inc/options-theme/OP_Profile/05-curriculum.php:189
 #: inc/options-theme/OP_Profile/04-aboutme.php:216
@@ -211,7 +324,11 @@ msgstr "Gestire il footer"
 msgid "Gérer le header"
 msgstr "Gestire il header"
 
+#. slug parent
+#. page_title
 #: inc/options-theme/OP_theme/01-customTheme.php:100
+#: inc/options-theme/OP_theme/03-home.php:60
+#: inc/options-theme/OP_theme/03-home.php:61
 msgid "Home"
 msgstr "Home"
 
@@ -222,6 +339,11 @@ msgstr "https://enzalombardo.be"
 #. URI of the theme
 msgid "https://enzawebdev.be"
 msgstr "https://enzawebdev.be"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:120
+msgid "Image en arrière plan"
+msgstr "Immagine di sfondo"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/05-curriculum.php:110
@@ -235,7 +357,21 @@ msgstr "mportare il mio CV"
 msgid "Instagram"
 msgstr "Instagram"
 
+#. SLUG_SECTION
+#: inc/options-theme/OP_theme/03-home.php:140
+msgid "Intro"
+msgstr "Introduzione"
+
+#: inc/options-theme/OP_theme/03-home.php:424
+#: inc/options-theme/OP_theme/03-home.php:483
+#: inc/options-theme/OP_theme/03-home.php:561
+#: inc/options-theme/OP_theme/03-home.php:604
+msgid "Italien"
+msgstr "Italiano"
+
+#. SLUG_SECTION
 #: inc/options-theme/OP_theme/02-core.php:245
+#: inc/options-theme/OP_theme/03-home.php:186
 msgid "Job"
 msgstr "Lavoro"
 
@@ -267,6 +403,18 @@ msgstr "Link per gestire la sezione about"
 msgid "Lien pour gérer la section portfolio"
 msgstr "Link per la gestione della sezione portfolio"
 
+#: inc/options-theme/OP_theme/03-home.php:443
+#: inc/options-theme/OP_theme/03-home.php:464
+#: inc/options-theme/OP_theme/03-home.php:485
+msgid "Ligne 1"
+msgstr "Linea 1"
+
+#: inc/options-theme/OP_theme/03-home.php:452
+#: inc/options-theme/OP_theme/03-home.php:473
+#: inc/options-theme/OP_theme/03-home.php:494
+msgid "Ligne 2"
+msgstr "Linea 2"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:133
 msgid "LinkedIn"
@@ -290,6 +438,14 @@ msgstr "La foto del mio avatar"
 #: inc/options-theme/OP_Profile/02-media.php:201
 msgid "Ma photo de profile"
 msgstr "La mia immagine del profilo"
+
+#: inc/options-theme/OP_theme/03-home.php:360
+msgid "Masquer la section home du thème"
+msgstr "Nascondere la sezione home del tema"
+
+#: inc/options-theme/OP_theme/03-home.php:530
+msgid "Masquer le poste visé"
+msgstr "Nascondere il post di destinazione"
 
 #: template-parts/footer/legal.php:18 template-parts/footer/legal.php:22
 #: template-parts/footer/legal.php:26
@@ -328,6 +484,17 @@ msgstr "Le mie reti"
 msgid "Mes réseaux sociaux"
 msgstr "Le mie reti sociali"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_theme/03-home.php:200
+msgid "Message"
+msgstr "Messaggio"
+
+#: inc/options-theme/OP_theme/03-home.php:589
+#: inc/options-theme/OP_theme/03-home.php:600
+#: inc/options-theme/OP_theme/03-home.php:611
+msgid "Modifier le texte \"Parler de sois\""
+msgstr "Modificare il testo \"Parlami di te\"
+
 #: inc/options-theme/OP_Profile/02-media.php:231
 #: inc/options-theme/OP_Profile/02-media.php:235
 msgid "Mon logo"
@@ -356,6 +523,7 @@ msgstr "Il mio portafoglio online"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:258
 #: inc/options-theme/OP_theme/02-core.php:237
+#: inc/options-theme/OP_theme/03-home.php:515
 msgid "Nom"
 msgstr "Cognome"
 
@@ -384,6 +552,10 @@ msgstr "Parlare di sé"
 msgid "Partie légale"
 msgstr "Parte legale"
 
+#: inc/options-theme/OP_theme/03-home.php:74
+msgid "Personnaliser l'accueil"
+msgstr "Personalizzare la sezione home"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/04-aboutme.php:111
 #: inc/options-theme/OP_Profile/04-aboutme.php:147
@@ -410,6 +582,7 @@ msgstr "Profilo"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:265
 #: inc/options-theme/OP_theme/02-core.php:241
+#: inc/options-theme/OP_theme/03-home.php:519
 msgid "Prénom"
 msgstr "Nome"
 
@@ -427,6 +600,26 @@ msgstr "Chi sono (in francese)"
 #: inc/options-theme/OP_Profile/04-aboutme.php:175
 msgid "Qui suis-je ? (en italien)"
 msgstr "Chi sono (in italiano)"
+
+#: inc/options-theme/OP_theme/03-home.php:402
+msgid "Salutation en 1 ligne"
+msgstr "Saluto in 1 riga"
+
+#: inc/options-theme/OP_theme/03-home.php:437
+msgid "Salutation en 2 lignes"
+msgstr "Saluto in 2 righe"
+
+#: inc/options-theme/OP_theme/03-home.php:420
+msgid "Salutation en anglais"
+msgstr "Saluto in inglese"
+
+#: inc/options-theme/OP_theme/03-home.php:411
+msgid "Salutation en français"
+msgstr "Saluto in francese"
+
+#: inc/options-theme/OP_theme/03-home.php:429
+msgid "Salutation en italien"
+msgstr "Saluto in italiano"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:223
 msgid "Section dédiée aux informations de contact"
@@ -470,14 +663,20 @@ msgstr "Sezione user"
 msgid "Site Web"
 msgstr "Sito Web"
 
+#: inc/options-theme/OP_theme/03-home.php:76
+msgid "Sur cette page vous pouvez gérer la section accueil du site"
+msgstr "In questa pagina è possibile gestire la sezione home del sito"
+
 #: inc/options-theme/OP_Profile/02-media.php:71
 msgid ""
 "Sur cette page vous pouvez gérer les différents médias de votre portfolio"
-msgstr "In questa pagina è possibile gestire i diversi media del proprio portfolio."
+msgstr ""
+"In questa pagina è possibile gestire i diversi media del proprio portfolio"
 
 #: inc/options-theme/OP_theme/01-customTheme.php:75
 msgid "Sur cette page vous pouvez gérer les différents éléments de notre theme"
-msgstr "In questa pagina è possibile gestire i diversi elementi del nostro tema"
+msgstr ""
+"In questa pagina è possibile gestire i diversi elementi del nostro tema"
 
 #: inc/options-theme/OP_Profile/03-network.php:71
 msgid "Sur cette page vous pouvez gérer les url de vos réseaux sociaux"
@@ -494,6 +693,24 @@ msgstr "In questa pagina è possibile gestire l'importazione del proprio CV"
 #: inc/options-theme/OP_Profile/04-aboutme.php:73
 msgid "Sur cette page, vous pouvez parler de vous"
 msgstr "In questa pagina potete parlare di voi stessi"
+
+#: inc/options-theme/OP_theme/03-home.php:469
+#: inc/options-theme/OP_theme/03-home.php:478
+#: inc/options-theme/OP_theme/03-home.php:556
+msgid "Texte en anglais"
+msgstr "Testo in inglese"
+
+#: inc/options-theme/OP_theme/03-home.php:448
+#: inc/options-theme/OP_theme/03-home.php:457
+#: inc/options-theme/OP_theme/03-home.php:546
+msgid "Texte en français"
+msgstr "Testo in francese"
+
+#: inc/options-theme/OP_theme/03-home.php:490
+#: inc/options-theme/OP_theme/03-home.php:499
+#: inc/options-theme/OP_theme/03-home.php:566
+msgid "Texte en italien"
+msgstr "Testo in italiano"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:195
@@ -530,6 +747,10 @@ msgstr "Telefono"
 #: inc/options-theme/OP_theme/02-core.php:291
 msgid "Uniquement le copyright"
 msgstr "Solo il copyright"
+
+#: inc/options-theme/OP_theme/03-home.php:538
+msgid "Uniquement si la section est visible"
+msgstr "Solo se la sezione è visibile"
 
 #: inc/options-theme/OP_theme/02-core.php:257
 msgid "Uniquement si photo est chocher"
